[Dark mode] Fix input-form border-color

--- a/src/less/2_bootstrap/mixins/forms.less
+++ b/src/less/2_bootstrap/mixins/forms.less
@@ -124,7 +124,12 @@
 .form-control-focus(@color: @input-border-focus) {
   @color-rgba: rgba(red(@color), green(@color), blue(@color), .6);
   &:focus {
-    border-color: @color;
+    .responsiveDark({
+      border-color: @color;
+    },
+    {
+      border-color: @input-border-focus-dark;
+    });
     outline: 0;
     .box-shadow(~"inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px @{color-rgba}");
   }
